--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -44,7 +45,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.7.3",
+    "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.0.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.344.0",
