--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.344.0",
     "next": "^15.3.2",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
@@ -71,6 +72,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@types/node": "^20.11.20",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^10.0.0",
